<resources>
    <string name="app_name">Fund Mytra</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Home Loans</string>
    <string name="slide_1_desc">Online Loans Partner \nDreams at your door step</string>

    <string name="slide_2_title">Education Loans</string>
    <string name="slide_2_desc">Get custom deals and special \ndiscounts tailored just for you!</string>

    <string name="slide_3_title">Car Loans</string>
    <string name="slide_3_desc">Online Loans Partner\n Dreams at your door step</string>

    <string name="slide_4_title">Business Loans</string>
    <string name="slide_4_desc">Online Loans Partner\nDreams at your door step</string>

    <string name="slide_5_title">All Credit Cards</string>
    <string name="slide_5_desc">Apply Credit Cards Online \nDreams at your door step</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="logtext_1">fund</string>
    <string name="logtext_2">mytra</string>
    <string name="email_phone">EMAIL ID/PHONE NO</string>
    <string name="password">PASSWORD</string>
    <string name="sinup">NO ACCOUNT? SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="forget">FORGET PASSWORD</string>
    <string name="hint"></string>
    <string name="fund">fund</string>
    <string name="mytra">mytra</string>
    <string name="signup">sign up</string>
    <string name="already_registered">Already Registered? </string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="phone_no">Phone No</string>
    <string name="email_id">Email id</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>

    <string name="verification_code">Verification Code</string>
    <string name="code2">Please type the verification code</string>
    <string name="sent">sent to +</string>

    <string name="content"></string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Home Loans</string>
    <string name="slide_1_desc">Online Loans Partner \nDreams at your door step</string>

    <string name="slide_2_title">Education Loans</string>
    <string name="slide_2_desc">Get custom deals and special \ndiscounts tailored just for you!</string>

    <string name="slide_3_title">Car Loans</string>
    <string name="slide_3_desc">Online Loans Partner\n Dreams at your door step</string>

    <string name="slide_4_title">Business Loans</string>
    <string name="slide_4_desc">Online Loans Partner\nDreams at your door step</string>

    <string name="slide_5_title">All Credit Cards</string>
    <string name="slide_5_desc">Apply Credit Cards Online \nDreams at your door step</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <!-- My Accounts. -->
    <string name="my_accounts">My Accounts</string>
    <string name="my_profile">My Profile</string>
    <string name="my_searches">My Searches</string>
    <string name="my_applications">My Applications</string>
    <string name="your_interest">Your Interests</string>
    <string name="salary_info">Salary Information</string>
    <string name="documents">Documents</string>
    <string name="contact_information">Contact Information</string>
    <string name="track_application">Track Your Application</string>
    <string name="name">Jayaram</string>
    <string name="email">ram2527@gmail.com</string>
    <string name="phone">8123387992</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="general_information">General Information</string>
    <string name="door_num">Door No</string>
    <string name="address_1">Address 1</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="myapplication">Cannot see your application here? Let us help you!</string>
    <string name="trackapp">Enter your Application ID and Mobile Number</string>
    <string name="fund">fund</string>
    <string name="mytra">mytra</string>
    <string name="signup">Login</string>
    <string name="already_registered">Already Registered? </string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="phone_no">EMAIL ID/PHONE NO</string>
    <string name="email_id">PASSWORD</string>

    <string name="content"></string>
</resources>
