<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:numpad="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_top_horizantal"
    android:layout_marginBottom="@dimen/margin_bottom_horizantal"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/margin_left_horizantal"
    android:layout_marginEnd="@dimen/margin_right_horizantal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logtext_1"
                android:textSize="30sp"
                android:gravity="end"
                android:textColor="@color/fundRed"
                android:fontFamily="@font/montserrat"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logtext_2"
                android:textSize="30sp"
                android:gravity="start"
                android:textColor="@color/fundRed"
                android:fontFamily="@font/montserrat_bold"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textColor="@color/fundRed"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code2"
                android:textColor="@color/fundBlack"
                android:fontFamily="@font/montserrat"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sent"
                android:textColor="@color/fundBlack"
                android:fontFamily="@font/montserrat"
                android:textSize="15sp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.7">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <EditText
                android:id="@+id/otp_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint"
                android:maxLength="1"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:layout_marginEnd="@dimen/margin_gridTop_horizantal"
                />
            <requestFocus />
            <EditText
                android:id="@+id/otp_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint"
                android:maxLength="1"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:layout_marginEnd="@dimen/margin_gridTop_horizantal"
                />
            <requestFocus />
            <EditText
                android:id="@+id/otp_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint"
                android:maxLength="1"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:layout_marginEnd="@dimen/margin_gridTop_horizantal"
                />
            <requestFocus />
            <EditText
                android:id="@+id/otp_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/editbox"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint"
                android:maxLength="1"
                android:gravity="center"
                android:imeOptions="actionNext"
                />
        </LinearLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:layout_marginTop="@dimen/margin_left_horizantal"
        >
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number1"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button2"
            android:text="@string/number2"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button3"
            android:text="@string/number3"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button4"
            android:text="@string/number4"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button5"
            android:text="@string/number5"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button6"
            android:text="@string/number6"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button7"
            android:text="@string/number7"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button8"
            android:text="@string/number8"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/button9"
            android:text="@string/number9"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
        android:text="@string/number2"
        android:visibility="gone"
        />
        <Button
            android:id="@+id/button0"
            android:text="@string/number0"
            android:textColor="@color/fundRed"
            android:textSize="15sp"
            android:textStyle="bold"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"/>
        <ImageButton
            android:id="@+id/button12"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/number2"
            android:src="@drawable/back"
            android:contentDescription="@string/hint"
            android:onClick="onClick"
            style="?android:attr/borderlessButtonStyle"
        />
        </GridLayout>
    </LinearLayout>
</LinearLayout>