<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".LoginSignupActivity">
<RelativeLayout
    android:id="@+id/fund_mytra"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@android:dimen/app_icon_size"
    android:layout_centerHorizontal="true">

    <TextView
        android:id="@+id/fund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/fund"
        android:textColor="@color/color"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/fund"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/mytra"
        android:textColor="@color/color"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>
<RelativeLayout
    android:id="@+id/relative_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/fund_mytra">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:src="@drawable/login___sign_up_1" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_logo"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="18sp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup"
            android:layout_below="@+id/login"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />
    </RelativeLayout>


</RelativeLayout>