<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/fund_mytra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/fund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/fund"
            android:textColor="@color/color"
            android:textSize="30sp" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/fund"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/mytra"
            android:textColor="@color/color"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
  <RelativeLayout
      android:id="@+id/content"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginStart="@android:dimen/app_icon_size">

      <TextView
          android:id="@+id/phone"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_marginTop="30dp"
          android:fontFamily="@font/montserrat"
          android:text="@string/phone_no"
          android:textAllCaps="true"
          android:textColor="@color/color"
          android:textSize="15sp" />


    <LinearLayout
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/phone">
        <ImageButton
            android:id="@+id/phone_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/email_id"/>
        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="phone"/>
    </LinearLayout>

      <TextView
          android:id="@+id/email"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/edit1"
          android:layout_centerInParent="true"
          android:fontFamily="@font/montserrat"
          android:layout_marginTop="20dp"
          android:text="@string/email_id"
          android:textAllCaps="true"

          android:textColor="@color/color"
          android:textSize="15sp" />
    <LinearLayout
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/email">
        <ImageButton
            android:id="@+id/email_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:src="@drawable/password"/>
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress|textWebEmailAddress" />
    </LinearLayout>

      <Button
          android:id="@+id/singUpBtn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/edit2"
          android:layout_marginEnd="20dp"
          android:layout_marginStart="@android:dimen/app_icon_size"
          android:layout_marginTop="25dp"
          android:background="@drawable/signup"
          android:fontFamily="@font/montserrat"
          android:text="@string/signup"
          android:textColor="@color/white"
          android:textSize="18sp"
          />
  </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@android:dimen/app_icon_size">

        <TextView
            android:id="@+id/already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/already_registered"
            android:textAllCaps="true"
            android:textColor="@color/color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/click_here_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/already_registered"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/click_here_to_login"
            android:textAllCaps="true"
            android:textColor="@color/color"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>